fix spacing bottom

--- a/css/style.css
+++ b/css/style.css
@@ -375,13 +375,7 @@ div.skills-bubble {
 }
 
 
-div.line {
-  height: 5rem;
-  border-left: 2px solid #ffffff;
-  opacity: 30%;
-  padding: 0;
-  display: flex;
-}
+
 
 div.quote-now {
   padding-top: 10rem;
@@ -399,6 +393,7 @@ h3.size-quote {
   font-weight: 600;
   color: #ffffff;
   letter-spacing: -1px;
+  margin-bottom: 2rem;
 }
 
 h3.second-part-quote {
@@ -422,15 +417,6 @@ h3.second-part-quote {
   100% {
     background-position: 0% 50%;
   }
-}
-
-
-div.line-vertical {
-  height: 5rem;
-  border-left: 2px solid;
-  opacity: 50%;
-  padding: 0;
-  display: flex;
 }
 
 
@@ -508,6 +494,9 @@ div.visit-position {
   font-family: var(--font);
   font-weight: 600;
   margin: 0 0 2rem 0 !important;
+}
+.github-logo:hover{
+  transform: scale(1.05);
 }
 
 p.visit-message {
